@@ -3,18 +3,21 @@ Hash: SHA1
 
 AUX naev-0.5.0-libpng15.patch 392 RMD160 f7ea16127208acb028a75317d9968dcb0653f437 SHA1 eba88bb99a1768d62bc06a95faa83eb043711b67 SHA256 34a9d377614c2664eec82dacabf9c6389c49d489a8bbc3876e50b3bf1dacd909
 DIST naev-0.5.0.tar.bz2 905700 RMD160 fc3a073843b3f8c90ceeb00b772fb951f741ccb8 SHA1 b10fe0b740909785ec74c84c6a0ebafc29a870e6 SHA256 cbaa09d036188a22c0c9c70f1db6e00923b138ff897cdd37072adf4a438a503d
+DIST naev-0.5.1.tar.bz2 999618 RMD160 eff0b649d4b9dca95d1a468ad5c9ab40db9d3a25 SHA1 4049c9c6134d81239b78bfc667e47c61ec05c6df SHA256 c14223ff492e7a28da01ab8dc4dfaf8fa78e2e768ce8b840f7a40729e56f59bd
 DIST ndata-0.5.0 227724242 RMD160 82db2c1ff58c1d90c04f9451ab820476f20764a3 SHA1 dfee04fd9087e48377f72a3d92a704eb04a38d3d SHA256 269be8d7ba0e39a79a57ecf26fbb85e642eab7b0566dab0c2c7268bf56ef0550
+DIST ndata-0.5.1 244647456 RMD160 043f231cb2a7f9aa0aec3382b064274e98d723a0 SHA1 893b900225edc474f4270e034f107bb863a61eb1 SHA256 33122d6e1070b00130137bda7884cc70446a8e79c3f126b11cdb2960cd7e9a31
 EBUILD naev-0.5.0.ebuild 1844 RMD160 445de823df3de476af8ff84cd9d05b665a1051ea SHA1 c1cba7b9bcc7f8eadc4d348859508a31aca2187b SHA256 14b491d15ae5bacf328b73a589e6f099508ec2c16b749c7a41f436bf7c099cfe
-MISC ChangeLog 1259 RMD160 fd2a80ae0dc75965094b4095cfb6a58aabdb6a3f SHA1 782b0d66d794bcd015826be57f69bab12110b368 SHA256 086e3be53ba9c7addbf4aec359daec25ffe02f1d1d018c26ecf26c821df8fbe3
+EBUILD naev-0.5.1.ebuild 1762 RMD160 3fbe225f78d15caca7511a41889a80e2580f127b SHA1 2f517bfcf04580ea53b8bfcb9f6e2386459fb9b3 SHA256 21a3eace56975fbb6c9b03001531a45634ac58c51fe55722df7f1227e9f48427
+MISC ChangeLog 1377 RMD160 eb4dd76a8826e0a343926491cb6d708d7f430983 SHA1 4c954b47bceb6d3ab0f7d8409019b269fe11390f SHA256 c065ab041f3fc973111632aa5a29d4f315584b301f667db85b700f2112d11075
 MISC metadata.xml 308 RMD160 f7395452605fcfcef405f50aa9e1707b889d18fa SHA1 b384f1d04a9cc84d68ec05ca0798a401b5b259d7 SHA256 f390ca2a4fec9b2be7a9fd5fa114aaf24f334a614a935f5a13c6ea340aeea145
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPUCmcAAoJEEdUh39IaPFNDxMIAIW9KuyGS6XCyt/kb0og3jBu
-NJaAY8El31RTluT6UzO3ZWjqX2nLQ2DSDpg0uM0cpow89bPyU0GbofqCVe+BK2CW
-c3RKeTp4J45XRVUctDjVbSRT8vsziSLEgi1vDWuIaVz/u3FvEq0pT1kOpRbLZ4cR
-u6lnLdgqXNp/xbBOI6XtDv1Vr2CewCgexyxKpaOoxYxb++gMlnAWahTfgp8Ekfho
-UBTV7MkOr3XIxa6bIp66QTWCmV9MZMd1U03lp5V5iPq4oZ9jAb02aczVI+ch5W4J
-wQD0T7uTLMubDf9ciuzfnEMTiNZ5XIOJ9YZNhSnJnGHXX+FK2q/ALIAyesErTjM=
-=VA1/
+iQEcBAEBAgAGBQJPUCxzAAoJEEdUh39IaPFNCEkH/Ao0nLFFx9FYjE1/IkI8WS1e
+033Nvz0FqFKer3m94dC/T4DQRixIGK2iRURx8141WygsQiwNn9wMaMTdSTK/v7VD
+0QhJMeT4xHwGgQ9e/m+uQYlX+P6ilfQBVygfl7VdH4/pKNxYNXcpRxsoPAL6mgZM
+33BuaplkrV2kfcCjwDcxERvuMA+V9eDKDg9+6nm9PRtG7YZTWYtJ25LeTCMPK1y7
+hmKE1AQ37isDn/w0QBg5OBI3OgvCMJYvleSe8hgDcILKDLk7Rl9ArzcJSZbTR2fy
+wXjKGDXSFnUyWZAhpfL7xe9HOHAF+vhcR1iYn8aYzKqa/9rMNN+HV+MogjoZ2sY=
+=R/DJ
 -----END PGP SIGNATURE-----
