@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/naev
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/naev/ChangeLog,v 1.8 2012/03/02 02:00:40 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/naev/ChangeLog,v 1.9 2012/03/02 02:12:46 ssuominen Exp $
+
+*naev-0.5.1 (02 Mar 2012)
+
+  02 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +naev-0.5.1.ebuild:
+  Version bump.
 
   02 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> -naev-0.4.2.ebuild:
   old
